logs/microblog.log
2025-03-10 11:27:15,539 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 11:27:42,104 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:10:32,859 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:11:04,851 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:15:21,669 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:17:05,158 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:18:13,694 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:19:23,536 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 12:19:54,246 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 13:13:04,006 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 13:37:34,348 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 13:39:58,009 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 13:42:31,158 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 13:46:43,301 INFO: Microblog startup [in C:\flaskmegatutorial\app\__init__.py:45]
2025-03-10 13:46:49,209 ERROR: Exception on /edit_profile [POST] [in C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\app\routes.py", line 86, in edit_profile
    form = EditProfileForm()
           ^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\wtforms\form.py", line 209, in __call__
    return type.__call__(cls, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: EditProfileForm.__init__() missing 1 required positional argument: 'original_username'
2025-03-10 13:46:55,476 ERROR: Exception on /edit_profile [GET] [in C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\app\routes.py", line 86, in edit_profile
    form = EditProfileForm()
           ^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\wtforms\form.py", line 209, in __call__
    return type.__call__(cls, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: EditProfileForm.__init__() missing 1 required positional argument: 'original_username'
2025-03-10 13:47:25,024 ERROR: Exception on /user/Salvador [GET] [in C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\app\routes.py", line 75, in user
    return render_template('user.html', user = user, posts = posts, form = form)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "C:\flaskmegatutorial\.venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\flaskmegatutorial\app\templates\user.html", line 18, in template
    {% elif not current_user.is_following(user) %}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'elif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
